sqlg-doc/docs/3.1.0/include/gremlin/predicates.adoc
=== Predicates

TinkerPop's http://tinkerpop.apache.org/javadocs/current/full/org/apache/tinkerpop/gremlin/process/traversal/Compare.html[Compare] and
http://tinkerpop.apache.org/javadocs/current/full/org/apache/tinkerpop/gremlin/process/traversal/Contains.html[Contains] predicates are optimized
to execute on the database.

==== Compare predicate

[source,java,options="nowrap"]
----
@Test
public void showComparePredicates() {
    Vertex a1 = this.sqlgGraph.addVertex(T.label, "A", "name", "a1");
    Vertex b1 = this.sqlgGraph.addVertex(T.label, "B", "name", "b1");
    Vertex b2 = this.sqlgGraph.addVertex(T.label, "B", "name", "b2");
    Vertex c1 = this.sqlgGraph.addVertex(T.label, "C", "name", "c1");
    Vertex c2 = this.sqlgGraph.addVertex(T.label, "C", "name", "c2");
    Vertex c3 = this.sqlgGraph.addVertex(T.label, "C", "name", "c3");
    Vertex c4 = this.sqlgGraph.addVertex(T.label, "C", "name", "c4");
    a1.addEdge("ab", b1);
    a1.addEdge("ab", b2);
    b1.addEdge("bc", c1);
    b1.addEdge("bc", c2);
    b2.addEdge("bc", c3);
    b2.addEdge("bc", c4);
    this.sqlgGraph.tx().commit();

    List<String> result = this.sqlgGraph.traversal()
            .V().hasLabel("A")
            .out().has("name", P.eq("b1"))
            .out().has("name", P.eq("c2")) <1>
            .<String>values("name")
            .toList();
    for (String name : result) {
        System.out.println(name);
    }
}
----
<1> The `P` predicates will resolve on the database as a `sql` `where` clause.

.sql
[source,sql,options="nowrap"]
----
SELECT
	"public"."V_C"."ID" AS "alias1",
	"public"."V_C"."name" AS "alias2"
FROM
	"public"."V_A" INNER JOIN
	"public"."E_ab" ON "public"."V_A"."ID" = "public"."E_ab"."public.A__O" INNER JOIN
	"public"."V_B" ON "public"."E_ab"."public.B__I" = "public"."V_B"."ID" INNER JOIN
	"public"."E_bc" ON "public"."V_B"."ID" = "public"."E_bc"."public.B__O" INNER JOIN
	"public"."V_C" ON "public"."E_bc"."public.C__I" = "public"."V_C"."ID"
WHERE
	( "public"."V_B"."name" = ?) AND ( "public"."V_C"."name" = ?)
----

The same pattern is used for all the
http://tinkerpop.apache.org/javadocs/current/full/org/apache/tinkerpop/gremlin/process/traversal/Compare.html[Compare] predicates.

==== Contains predicate

Sqlg's implementation of http://tinkerpop.apache.org/javadocs/current/full/org/apache/tinkerpop/gremlin/process/traversal/Contains.html[Contains]
is slightly more complex.

For Postgresql, MSSqlServer and HSQLDB a join onto a `values expression` is used.

For H2 and MariaDB a regular `in` clause is used.

[source,java,options="nowrap"]
----
@Test
public void showContainsPredicate() {
    List<Integer> numbers = new ArrayList<>(10000);
    for (int i = 0; i < 10000; i++) {
        this.sqlgGraph.addVertex(T.label, "A", "number", i);
        numbers.add(i);
    }
    this.sqlgGraph.tx().commit();

    List<Vertex> persons = this.sqlgGraph.traversal().V()
            .hasLabel("A")
            .has("number", P.within(numbers))
            .toList();

    assertEquals(10000, persons.size());
}
----

.sql
[source,sql,options="nowrap"]
----
SELECT
	"public"."V_A"."ID" AS "alias1",
	"public"."V_A"."number" AS "alias2"
FROM
	"public"."V_A" INNER JOIN
	(VALUES (0::INTEGER), (1::INTEGER), ... (9998::INTEGER), (9999::INTEGER)) as tmp1(within) on "public"."V_A"."number" = tmp1.within
----

This pattern makes `P.within` and `p.without` very fast even with millions of values being passed into the query.
For the case of there being only one value Sqlg will use an `equals` instead of a values statement or an `in` statement.

==== Text predicate

[NOTE]
Sqlg assumes a case-sensitive collation.
MSSqlServer does not default to a case-sensitive collation.
Create the database with `CREATE DATABASE sqlgraphdb COLLATE sql_latin1_general_cp1_cs_as`

Sqlg includes its own Text predicate for full text queries.

* Text.contains (case sensitive string contains)
* Text.ncontains (case sensitive string does not contain)
* Text.containsCIS (case insensitive string contains)
* Text.ncontainsCIS (case insensitive string does not contain)
* Text.startsWith (case sensitive string starts with)
* Text.nstartsWith (case sensitive string does not start with)
* Text.endsWith (case sensitive string ends with)
* Text.nendsWith (case sensitive string does not end with)

[source,java,options="nowrap"]
----
@Test
public void showTextPredicate() {
    Vertex john = this.sqlgGraph.addVertex(T.label, "Person", "name", "John XXX Doe");
    Vertex peter = this.sqlgGraph.addVertex(T.label, "Person", "name", "Peter YYY Snow");
    this.sqlgGraph.tx().commit();

    List<Vertex> persons = this.sqlgGraph.traversal().V()
            .hasLabel("Person")
            .has("name", Text.contains("XXX")).toList();

    assertEquals(1, persons.size());
    assertEquals(john, persons.get(0));
}
----

.sql
[source,sql,options="nowrap"]
----
SELECT
	"public"."V_Person"."ID" AS "alias1",
	"public"."V_Person"."name" AS "alias2"
FROM
	"public"."V_Person"
WHERE
	( "public"."V_Person"."name" like ?)
----

==== Full text search

Full text search is supported on postgresql.

This is shown under <<anchor-full-text-indexing>>

==== DateTime queries

LocalDateTime, LocalDate and LocalTime queries are supported.

[source,java,options="nowrap"]
----
@Test
public void showSearchOnLocalDateTime() {
    LocalDateTime born1 = LocalDateTime.of(1990, 1, 1, 1, 1, 1);
    LocalDateTime born2 = LocalDateTime.of(1990, 1, 1, 1, 1, 2);
    LocalDateTime born3 = LocalDateTime.of(1990, 1, 1, 1, 1, 3);
    Vertex john = this.sqlgGraph.addVertex(T.label, "Person", "name", "John", "born", born1);
    Vertex peter = this.sqlgGraph.addVertex(T.label, "Person", "name", "Peter", "born", born2);
    Vertex paul = this.sqlgGraph.addVertex(T.label, "Person", "name", "Paul", "born", born3);
    this.sqlgGraph.tx().commit();

    List<Vertex> persons = this.sqlgGraph.traversal().V().hasLabel("Person")
            .has("born", P.eq(born1))
            .toList();
    assertEquals(1, persons.size());
    assertEquals(john, persons.get(0));

    persons = this.sqlgGraph.traversal().V().hasLabel("Person")
            .has("born", P.between(LocalDateTime.of(1990, 1, 1, 1, 1, 1), LocalDateTime.of(1990, 1, 1, 1, 1, 3)))
            .toList();
    //P.between is inclusive to exclusive
    assertEquals(2, persons.size());
    assertTrue(persons.contains(john));
    assertTrue(persons.contains(peter));
}
----

.sql
[source,sql,options="nowrap"]
----
SELECT
	"public"."V_Person"."ID" AS "alias1",
	"public"."V_Person"."born" AS "alias2",
	"public"."V_Person"."name" AS "alias3"
FROM
	"public"."V_Person"
WHERE
	( "public"."V_Person"."born" >= ?) AND ( "public"."V_Person"."born" < ?)
----

==== Ltree queries

Postgresql's https://www.postgresql.org/docs/current/ltree.html[ltree] extension is supported.
Sqlg includes two custom predicates to help query a `ltree` column.

==== Lquery predicate

[source,java,options="nowrap"]
----
@Test
public void testLTreeLquery() {
    Assume.assumeTrue(isPostgres());
    this.sqlgGraph.getTopology().getPublicSchema()
            .ensureVertexLabelExist("Tree", new HashMap<>() {{
                put("path", PropertyDefinition.of(PropertyType.LTREE)); <1>
            }});
    this.sqlgGraph.tx().commit();
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.two");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.two.three"); <2>
    this.sqlgGraph.tx().commit();
    List<Vertex> tree = this.sqlgGraph.traversal().V().hasLabel("Tree")
            .has("path", Lquery.descendantOfRightOrEquals("one.two")) <3>
            .toList();
    Assert.assertEquals(2, tree.size());

    tree = this.sqlgGraph.traversal().V().hasLabel("Tree")
            .has("path", Lquery.ancestorOfRightOrEquals("one.two")) <4>
            .toList();
    Assert.assertEquals(2, tree.size());

    tree = this.sqlgGraph.traversal().V().hasLabel("Tree")
            .has("path", Lquery.lquery("one.two.*")) <5>
            .toList();
    Assert.assertEquals(2, tree.size());
}
----
<1> Create a table with a column of type `PropertyType.LTREE`
<2> Insert some path hierarchical data.
<3> Query the `path` using the `Lquery` predicate. In this case searching for descendants.
<4> Query the `path` using the `Lquery` predicate. In this case searching for ancestors.
<5> Query the `path` using the `Lquery` predicate. In this case using ltree's query syntax.

.sql
[source,sql,options="nowrap"]
----
SELECT
	"public"."V_Tree"."ID" AS "alias1",
	"public"."V_Tree"."path" AS "alias2"
FROM
	"public"."V_Tree"
WHERE
	( "public"."V_Tree"."path" <@ ?)


SELECT
	"public"."V_Tree"."ID" AS "alias1",
	"public"."V_Tree"."path" AS "alias2"
FROM
	"public"."V_Tree"
WHERE
	( "public"."V_Tree"."path" @> ?)

SELECT
	"public"."V_Tree"."ID" AS "alias1",
	"public"."V_Tree"."path" AS "alias2"
FROM
	"public"."V_Tree"
WHERE
	( "public"."V_Tree"."path" ~ ?)

----

==== LqueryArray predicate

[source,java,options="nowrap"]
----
@Test
public void testLTreeLqueryArray() throws SQLException {
    Assume.assumeTrue(isPostgres());
    this.sqlgGraph.getTopology().getPublicSchema()
            .ensureVertexLabelExist("Tree", new HashMap<>() {{
                put("path", PropertyDefinition.of(PropertyType.LTREE));
            }});
    this.sqlgGraph.tx().commit();
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.two");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.two.one");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.two.two");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.three");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.three.one");
    this.sqlgGraph.addVertex(T.label, "Tree", "path", "one.three.two");
    this.sqlgGraph.tx().commit();

    List<Vertex> tree = this.sqlgGraph.traversal().V().hasLabel("Tree")
            .has("path", LqueryArray.descendantOfRightOrEquals(new String[]{"one.two", "one.three"})) <1>
            .toList();
    Assert.assertEquals(6, tree.size());

    tree = this.sqlgGraph.traversal().V().hasLabel("Tree")
            .has("path", LqueryArray.ancestorOfRightOrEquals(new String[]{"one.two", "one.three"}))
            .toList();
    Assert.assertEquals(3, tree.size());
}
----

<1> Use `LqueryArray` to do a ltree query passing in an array

.sql
[source,sql,options="nowrap"]
----
SELECT
	"public"."V_Tree"."ID" AS "alias1",
	"public"."V_Tree"."path" AS "alias2"
FROM
	"public"."V_Tree"
WHERE
	( "public"."V_Tree"."path" <@ ?)
----
